--- a/tdlibFeatureModules/sharedTdlibFeature/src/iosMain/cinterop/libtdjson.xcframework/Info.plist
+++ b/tdlibFeatureModules/sharedTdlibFeature/src/iosMain/cinterop/libtdjson.xcframework/Info.plist
@@ -6,11 +6,11 @@
 	<array>
 		<dict>
 			<key>BinaryPath</key>
-			<string>libtdjson.1.8.51.dylib</string>
+			<string>libtdjson.dylib</string>
 			<key>LibraryIdentifier</key>
 			<string>ios-arm64_x86_64-simulator</string>
 			<key>LibraryPath</key>
-			<string>libtdjson.1.8.51.dylib</string>
+			<string>libtdjson.dylib</string>
 			<key>SupportedArchitectures</key>
 			<array>
 				<string>arm64</string>
@@ -23,11 +23,11 @@
 		</dict>
 		<dict>
 			<key>BinaryPath</key>
-			<string>libtdjson.1.8.51.dylib</string>
+			<string>libtdjson.dylib</string>
 			<key>LibraryIdentifier</key>
 			<string>ios-arm64</string>
 			<key>LibraryPath</key>
-			<string>libtdjson.1.8.51.dylib</string>
+			<string>libtdjson.dylib</string>
 			<key>SupportedArchitectures</key>
 			<array>
 				<string>arm64</string>
